# ics_normalizer

./: .pre-commit-config.yaml  LICENSE  README.md  app.py  cli  ics_normalizer.py  pyproject.toml  qa.http  requirements.txt
