[project]
name = "ics-normalizer"
version = "0.1.0"
description = "A service to convert ICS feeds to a normalized format"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "python-dateutil>=2.9.0.post0",
    "icalendar>=6.3.1",
    "recurring-ical-events>=3.8.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
    "python-dotenv>=1.1.1",
]
